--- a/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.html
+++ b/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.html
@@ -2,42 +2,71 @@
 
 <div class="wrapper">
   <div class="tab-container">
-    <button class="tab" (click)="setActiveTab('title')" [ngClass]="{ active: activeTab === 'title' }">
+    <button
+      class="tab"
+      (click)="setActiveTab('title')"
+      [ngClass]="{ active: activeTab === 'title' }"
+    >
       Tìm công việc
     </button>
 
-    <button class="tab" (click)="setActiveTab('company')" [ngClass]="{ active: activeTab === 'company' }">
+    <button
+      class="tab"
+      (click)="setActiveTab('company')"
+      [ngClass]="{ active: activeTab === 'company' }"
+    >
       Tìm theo công ty
     </button>
 
-    <button class="tab" (click)="setActiveTab('location')" [ngClass]="{ active: activeTab === 'location' }">
+    <button
+      class="tab"
+      (click)="setActiveTab('location')"
+      [ngClass]="{ active: activeTab === 'location' }"
+    >
       Tìm theo địa điểm
     </button>
   </div>
 
   <div class="search-container">
-    <input type="text" [(ngModel)]="searchQuery" placeholder="Tìm kiếm theo tên công ty, công việc, địa điểm,..." />
+    <input
+      type="text"
+      [(ngModel)]="searchQuery"
+      placeholder="Tìm kiếm theo tên công ty, công việc, địa điểm,..."
+    />
     <button class="search-btn" (click)="search()">Tìm kiếm</button>
   </div>
 </div>
 
 <div *ngIf="paginatedRecruitments.length > 0; else noResults">
   <div class="post" *ngFor="let post of paginatedRecruitments">
-    <img [src]="'assets/images/slide1.jpg'" alt="{{ post.companyName }}" class="company-logo" />
+    <img
+      [src]="'assets/images/slide1.jpg'"
+      alt="{{ post.companyName }}"
+      class="company-logo"
+    />
     <strong>{{ post.type }}</strong>
+    <div class="action-buttons">
+      <button
+        class="favorite-btn"
+        (click)="toggleJobFollow($event, post.id)"
+        *ngIf="isLoggedIn()"
+        [style.color]="isJobFollowed(post.id) ? 'inherit' : 'red'"
+      >
+        {{ isJobFollowed(post.id) ? "Bỏ yêu thích" : "Yêu thích" }}
+      </button>
+      <a
+        class="apply-btn"
+        style="cursor: pointer"
+        (click)="onApply(post)"
+        *ngIf="isLoggedIn()"
+      >
+        Ứng tuyển ngay
+      </a>
+    </div>
     <p>{{ post.title }}</p>
     <small>{{ post.description }}</small>
     <div class="salary-box">
       <small>{{ post.salary }} triệu</small>
-    </div>
-    <div class="action-buttons">
-      <button class="favorite-btn" (click)="toggleJobFollow($event, post.id)" *ngIf="isLoggedIn()"
-        [style.color]="isJobFollowed(post.id) ? 'inherit' : 'red'">
-        {{ isJobFollowed(post.id) ? "Bỏ yêu thích" : "Yêu thích" }}
-      </button>
-      <a class="apply-btn" style="cursor: pointer" (click)="onApply(post)" *ngIf="isLoggedIn()">
-        Ứng tuyển ngay
-      </a>
     </div>
     <p class="login-message" *ngIf="!isLoggedIn()">
       Vui lòng <a routerLink="/login">đăng nhập</a> để ứng tuyển
@@ -49,12 +78,18 @@
       Previous
     </button>
 
-    <button *ngFor="let page of [].constructor(totalPages); let i = index" (click)="goToPage(i + 1)"
-      [class.active]="currentPage === i + 1">
+    <button
+      *ngFor="let page of [].constructor(totalPages); let i = index"
+      (click)="goToPage(i + 1)"
+      [class.active]="currentPage === i + 1"
+    >
       {{ i + 1 }}
     </button>
 
-    <button (click)="goToPage(currentPage + 1)" [disabled]="currentPage === totalPages">
+    <button
+      (click)="goToPage(currentPage + 1)"
+      [disabled]="currentPage === totalPages"
+    >
       Next
     </button>
   </div>
