--- a/Web_Client/src/app/feature/profile/profile.component.css
+++ b/Web_Client/src/app/feature/profile/profile.component.css
@@ -60,10 +60,25 @@ header {
 }
 
 .avatar {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
-    margin-right: 10px;
+    object-fit: cover;
+    margin-bottom: 8px;
+}
+
+.avatar-input {
+    display: block;
+    width: 100%;
+    max-width: 200px;
+    padding: 8px;
+    border: 2px dashed #007bff; /* Viền nét đứt */
+    border-radius: 5px;
+    background-color: #f8f9fa;
+    text-align: center;
+    font-size: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 .edit-btn {
