--- a/Web_Client/src/app/feature/profile/profile.component.html
+++ b/Web_Client/src/app/feature/profile/profile.component.html
@@ -15,7 +15,7 @@
         <div class="profile-card">
             <div class="user-info">
                 <img [src]="userProfile.image || 'default-avatar.png'" alt="User Avatar" class="avatar">
-                <input type="file" (change)="onImageChange($event)" class="avatar-input">
+                <input type="file" class="avatar-input">
                 <div>
                     <h3>{{ userProfile.fullName }}</h3>
                     <p>{{ userProfile.email }}</p>
@@ -24,7 +24,7 @@
             <button (click)="updateProfile()" class="edit-btn">Edit</button>
         </div>
 
-        <div class="form-container">
+        <div class="form-container">    
             <div class="form-group">
                 <label>Full Name</label>
                 <input type="text"  [(ngModel)]="userProfile.fullName">
